pihole/cloudfared-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cloudflared
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
      - env:
        - name: TZ
          value: "America/Chicago"
        - name: TUNNEL_DNS_PORT
          value: "5053"
        - name: TUNNEL_DNS_ADDRESS
          value: "0.0.0.0"
        - name: TUNNEL_DNS_UPSTREAM
          value: "https://1.1.1.1/dns-query,https://1.0.0.1/dns-query,https://9.9.9.9/dns-query,https://149.112.112.9/dns-query"
        imagePullPolicy: IfNotPresent
        image: cloudflare/cloudflared
        name: cloudflared
        ports:
        - containerPort: 5053
          name: http
          protocol: TCP
