pihole/pihole-http.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: pihole-http
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: pihole
  type: LoadBalancer
