pihole/pihole-tcp.yaml
apiVersion: v1
kind: Service
  name: pihole-tcp
spec:
  externalTrafficPolicy: Local
  healthCheckNodePort: 30331
  loadBalancerIP: 192.168.100.40
  ports:
  - name: http
    nodePort: 32411
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 30219
    port: 443
    protocol: TCP
    targetPort: https
  - name: dns
    nodePort: 31990
    port: 53
    protocol: TCP
    targetPort: dns
  selector:
    app: pihole
    io.cattle.field/appId: pihole
    release: pihole
  sessionAffinity: None
  type: LoadBalancer
