pihole/pihole-udp.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
  name: pihole-udp
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.100.40
  ports:
  - name: dns-udp
    nodePort: 31427
    port: 53
    protocol: UDP
    targetPort: dns-udp
  - name: client-udp
    nodePort: 32016
    port: 67
    protocol: UDP
    targetPort: client-udp
  selector:
    app: pihole
  sessionAffinity: None
  type: LoadBalancer
